# the_pitlord

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
webapp/bot/: admin.py  bot_main.py  models.py
webapp/bot/battle/: battle.py
webapp/bot/management/commands/: create_superuser.py  dbc.py  runbot.py
webapp/bot/migrations/: 0001_initial.py  0002_alter_battlemodel_current_round_and_more.py  0003_battlemodel_queue_alter_heromodel_hero_class_and_more.py  0004_alter_heromodel_hero_class_alter_heromodel_nickname.py  0005_alter_heromodel_hero_class_alter_heromodel_nickname.py  0006_rename_queue_battlemodel_queued_and_more.py  0007_alter_battlemodel_started_alter_heromodel_hero_class_and_more.py  0008_alter_heromodel_hero_class_alter_heromodel_nickname.py  0009_alter_heromodel_hero_class_alter_heromodel_nickname.py  0010_alter_heromodel_hero_class_alter_heromodel_nickname.py  0011_alter_heromodel_hero_class_alter_heromodel_nickname.py  0012_rename_nickname_heromodel_hero_nickname.py  0013_rename_hero_nickname_heromodel_nickname.py  0014_alter_heromodel_hero_stage.py  0015_remove_battlemodel_hero_3_alter_actionmodel_heal.py
webapp/bot/random_text/: utils.py
webapp/bot/visuals/: class_imgs.py  hero_text_repr.py  markups.py  stage_imgs.py  stage_text.py
webapp/webapp/: settings.py
webapp/webapp/settings/: base.py  dev.py  prod.py
